log/build_2024-12-05_22-00-16/manager/stderr.log
  File "/home/robot/human_ws/install/manager/lib/python3.10/site-packages/manager/manager.py", line 297
    stand.targ  et_state = 4
                ^^^^^^^^
SyntaxError: invalid syntax

